--- a/test_input.yaml
+++ b/test_input.yaml
@@ -6,7 +6,7 @@ reference:
   method: eom
   singlets: 5
 candidates:
-  fomo:
+  casci_fomo:
     fon_temperature: [0.15,0.35]
     active_space: [[2,2],[4,3],[4,4],[6,5],[6,6]]
   casscf:
@@ -14,23 +14,15 @@ candidates:
   hhtda:
     method: ['wpbe','wB97x']
     rc_w: [0.2,0.5]
-  hhtda_fomo:
-    method: ['wpbe','wB97x']
-    fon_temperature: [0.15,0.35]
-    rc_w: [0.2,0.5]
 grader:
-  character_filter:
-    inflection_point: 0.2 #Inflection point of the filter sigmoid, steepness doesnt matter as value will snap to integer 
-    char_thresh: 0.2 #Diffence in absorptivity allowed without full penalty 
-  order_filter:    
-    singlet_triplet: true #Energy order filter True/False
-    Ediff: 0.2 #Energy difference allowed for energy order filter  
-  abs_grader:
-    pen_mult_a: 3 #Multiplier (a) to abs_grader
-    a_cutoff: 0.1 #Threshold of Bright/Dark status
-    a_steepness: 50 #Steepness of the grader sigmoid
-    a_inflection_point: 0.05 #Inflection point of the grader sigmoid
-  energy_grader:
-    pen_mult_b: 3 #Multiplier (b) to energy_grader
   time_grader:
-    pen_mult_c: 1 #Multiplier (c) to time_grader
+    time_weight: 0 #Multiplier (b) to time_grader
+  excited_state:
+    bright_opt: 'no' #Do bright state optimization, yes/no.
+    TDDFT: 'no' #TD-DFT optimzation of bright states
+    opt_state_target : 'all' # Optimize 'all' bright states or just 'lowest' energy bright state
+visuals:
+  title: 'S0min' #Set title for images 
+  top_scores: 10 #How many Cand show up in plot
+  countas_bright: 0.1 #Threshhold to count as a bright state.
+  image_type: 'png' #Plot image file type, limited by whats allowed in python 
